--- a/AutoMall/ViewControllers/Upkeep/ResultCheckContentDetailCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/ResultCheckContentDetailCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6sM-TC-f1i">
@@ -31,7 +31,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正常" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="YLe-2d-4RG">
-                        <rect key="frame" x="257" y="10" width="55" height="22"/>
+                        <rect key="frame" x="209" y="10" width="55" height="22"/>
                         <color key="backgroundColor" red="0.0" green="0.65098039220000004" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="ILW-cq-05z"/>
@@ -41,22 +41,36 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3RM-3u-v7v">
+                        <rect key="frame" x="272" y="1" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="9G8-PU-fG5"/>
+                            <constraint firstAttribute="height" constant="40" id="Aqe-5u-68T"/>
+                        </constraints>
+                        <state key="normal" image="photoBtn"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="6sM-TC-f1i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="3ud-8v-JhG"/>
+                    <constraint firstAttribute="trailing" secondItem="3RM-3u-v7v" secondAttribute="trailing" constant="8" id="61i-Y2-snw"/>
+                    <constraint firstItem="3RM-3u-v7v" firstAttribute="leading" secondItem="YLe-2d-4RG" secondAttribute="trailing" constant="8" id="FE8-y3-HH5"/>
                     <constraint firstItem="YLe-2d-4RG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="NMF-gh-ml8"/>
                     <constraint firstItem="MQC-Kd-0YE" firstAttribute="centerY" secondItem="6sM-TC-f1i" secondAttribute="centerY" id="bNr-IJ-ivd"/>
                     <constraint firstItem="6sM-TC-f1i" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="d40-C3-YQ7"/>
+                    <constraint firstItem="3RM-3u-v7v" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="n7L-Do-D6H"/>
                     <constraint firstItem="MQC-Kd-0YE" firstAttribute="leading" secondItem="6sM-TC-f1i" secondAttribute="trailing" constant="12" id="o8A-JQ-vd1"/>
-                    <constraint firstAttribute="trailing" secondItem="YLe-2d-4RG" secondAttribute="trailing" constant="8" id="oBJ-xN-Vch"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="checkContentL" destination="6sM-TC-f1i" id="Evy-fr-dOp"/>
                 <outlet property="levelL" destination="YLe-2d-4RG" id="CrR-LE-5AL"/>
+                <outlet property="photoBtn" destination="3RM-3u-v7v" id="00Q-fc-gYC"/>
                 <outlet property="resultL" destination="MQC-Kd-0YE" id="UY8-1t-eQl"/>
             </connections>
-            <point key="canvasLocation" x="-36" y="-15"/>
+            <point key="canvasLocation" x="-363" y="-9"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="photoBtn" width="20" height="20"/>
+    </resources>
 </document>
