--- a/AutoMall/ViewControllers/Upkeep/UpkeepPlanNormalCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/UpkeepPlanNormalCell.xib
@@ -18,22 +18,21 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRY-Io-3A4">
-                        <rect key="frame" x="224" y="11" width="80" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRY-Io-3A4">
+                        <rect key="frame" x="304" y="11" width="0.0" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="DsW-50-hRM"/>
-                            <constraint firstAttribute="width" constant="80" id="wEx-KT-jLV"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="机油更换" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="jZD-0v-VtY" customClass="StrikeThroughLabel">
-                        <rect key="frame" x="16" y="11" width="61.5" height="21"/>
+                        <rect key="frame" x="16" y="11" width="57.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="54Z-4X-m0n"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
