--- a/AutoMall/ViewControllers/Upkeep/CheckResultSingleCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultSingleCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,11 +15,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="雨刮" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="o44-19-bAd">
-                        <rect key="frame" x="8" y="12" width="82" height="19.5"/>
+                        <rect key="frame" x="16" y="12" width="82" height="19.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="82" id="LSG-Hr-ZuT"/>
                         </constraints>
@@ -28,12 +28,12 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="太阳纹/洗车纹" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="504-d1-Uln">
-                        <rect key="frame" x="98" y="13" width="97" height="18"/>
+                        <rect key="frame" x="106" y="13" width="97" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="数值" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmA-Pj-htw">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="数值" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmA-Pj-htw">
                         <rect key="frame" x="197" y="13.5" width="29" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.24705882352941178" green="0.24705882352941178" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
@@ -64,7 +64,7 @@
                     <constraint firstItem="ME0-0V-oMV" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="4wW-G3-NqG"/>
                     <constraint firstItem="504-d1-Uln" firstAttribute="centerY" secondItem="o44-19-bAd" secondAttribute="centerY" id="HEQ-YS-crw"/>
                     <constraint firstItem="o44-19-bAd" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="OBc-za-YzZ"/>
-                    <constraint firstItem="o44-19-bAd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="OzL-Ce-qt3"/>
+                    <constraint firstItem="o44-19-bAd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="OzL-Ce-qt3"/>
                     <constraint firstItem="Ltq-wW-zlb" firstAttribute="leading" secondItem="ME0-0V-oMV" secondAttribute="trailing" constant="8" id="TaK-JG-wsJ"/>
                     <constraint firstAttribute="trailing" secondItem="Ltq-wW-zlb" secondAttribute="trailing" constant="8" id="eBh-Ar-YLd"/>
                     <constraint firstItem="ME0-0V-oMV" firstAttribute="leading" secondItem="cmA-Pj-htw" secondAttribute="trailing" constant="15" id="fm3-fJ-XLG"/>
