--- a/AutoMall/ViewControllers/Upkeep/ServiceContentDetailVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/ServiceContentDetailVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -26,9 +26,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Txh-3c-Zfl">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8dy-hm-bld">
-                                    <rect key="frame" x="8" y="10" width="359" height="233"/>
-                                    <mutableString key="text">Label lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel lLabel l</mutableString>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8dy-hm-bld">
+                                    <rect key="frame" x="8" y="10" width="359" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
