--- a/AutoMall/ViewControllers/Upkeep/UpKeepPlanServiceCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/UpKeepPlanServiceCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="机油更换" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="ROG-aw-OuP" customClass="StrikeThroughLabel">
@@ -26,11 +26,11 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥9999.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="ADy-rA-bOI" customClass="StrikeThroughLabel">
-                        <rect key="frame" x="229" y="11" width="75" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥9999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="ADy-rA-bOI" customClass="StrikeThroughLabel">
+                        <rect key="frame" x="260" y="11" width="60" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="gcI-ia-n8l"/>
-                            <constraint firstAttribute="width" constant="75" id="psH-fy-tRw"/>
+                            <constraint firstAttribute="width" constant="60" id="psH-fy-tRw"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <nil key="highlightedColor"/>
@@ -39,7 +39,7 @@
                 <constraints>
                     <constraint firstItem="ROG-aw-OuP" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="12H-9g-Kzi"/>
                     <constraint firstItem="ROG-aw-OuP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Kbk-hE-1fu"/>
-                    <constraint firstAttribute="trailing" secondItem="ADy-rA-bOI" secondAttribute="trailing" constant="16" id="t69-N1-Q2q"/>
+                    <constraint firstAttribute="trailing" secondItem="ADy-rA-bOI" secondAttribute="trailing" id="t69-N1-Q2q"/>
                     <constraint firstItem="ADy-rA-bOI" firstAttribute="centerY" secondItem="ROG-aw-OuP" secondAttribute="centerY" id="v6q-fd-rFr"/>
                 </constraints>
             </tableViewCellContentView>
