--- a/AutoMall/ViewControllers/Mall/MetodPaymentVC.xib
+++ b/AutoMall/ViewControllers/Mall/MetodPaymentVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -99,8 +99,8 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您的订单编号：10089234324" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jd-JI-cSf">
-                                            <rect key="frame" x="16" y="43.5" width="206" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您的订单编号:10089234324" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="3jd-JI-cSf">
+                                            <rect key="frame" x="16" y="43.5" width="194.5" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
@@ -160,10 +160,10 @@
                                             <exclude reference="tpf-ji-q6D"/>
                                             <exclude reference="5pI-Rk-o7H"/>
                                             <exclude reference="CRY-z6-u9F"/>
-                                            <exclude reference="G8M-vP-b3l"/>
-                                            <exclude reference="Kv2-AU-aaF"/>
                                             <exclude reference="AnY-w6-mmt"/>
                                             <exclude reference="Pxy-kg-amL"/>
+                                            <exclude reference="G8M-vP-b3l"/>
+                                            <exclude reference="Kv2-AU-aaF"/>
                                         </mask>
                                     </variation>
                                     <variation key="widthClass=compact">
@@ -177,10 +177,10 @@
                                             <include reference="tpf-ji-q6D"/>
                                             <include reference="5pI-Rk-o7H"/>
                                             <include reference="CRY-z6-u9F"/>
-                                            <include reference="G8M-vP-b3l"/>
-                                            <include reference="Kv2-AU-aaF"/>
                                             <include reference="AnY-w6-mmt"/>
                                             <include reference="Pxy-kg-amL"/>
+                                            <include reference="G8M-vP-b3l"/>
+                                            <include reference="Kv2-AU-aaF"/>
                                         </mask>
                                     </variation>
                                 </view>
